force-app/main/default/objects/Bond_Deduction__c/fields/Bond__c.field-meta.xml
<CustomField>
    <fullName>Bond__c</fullName>
    <description>Master-detail link to an existing Bond record to record deductions applied to said bond.</description>
    <label>Bond</label>
    <referenceTo>Bond__c</referenceTo>
    <relationshipLabel>Bond Deductions</relationshipLabel>
    <relationshipName>Bond_Deductions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>