force-app/main/default/objects/Bond_Deduction__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates a Case record to a Bond Deduction payment per Jan&#39;s request (10/9/15)</description>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Bond Deductions</relationshipLabel>
    <relationshipName>Bond_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>